--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,7 +2,7 @@ sonar.projectKey=auto-complete
 sonar.organization=vamshi-projects
 sonar.host.url=https://sonarcloud.io
 sonar.sources=src
-sonar.exclusions=**/node_modules/**,**/*.spec.js,**/*.stories.js,**/*.stories.jsx
+sonar.exclusions=**/node_modules/**,**/*.spec.js,**/*.stories.js,**/*.stories.jsx,**/reportWebVitals.js,**/index.js
 sonar.tests=src
 sonar.test.inclusions=**/*.test.js,**/*.test.jsx
 sonar.test.exclusions=**/*.png, **/*.jpg
